--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "serve": "docusaurus serve",
     "write-translations": "docusaurus write-translations",
     "write-heading-ids": "docusaurus write-heading-ids",
-    "typecheck": "tsc"
+    "typecheck": "tsc",
+    "aggregate-games": "node scripts/aggregate-games.js"
   },
   "dependencies": {
     "@docusaurus/core": "3.9.2",
